--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ lightning_logs/
 !ensemble/*/*.csv
 !Z-archive_results_ensemble/*/*.csv
 !paper_generate_graphs/data/*.csv
+!results_baseline/*/*.csv
