--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ lightning_logs/
 !Z-archive_results_ensemble/*/*.csv
 !paper_generate_graphs/data/*.csv
 !results_baseline/*/*.csv
+!AE-ALS_ensemble-PNCF-SVDpp_ensemble-LSQ-results.csv
